--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -479,15 +479,13 @@ and~\cite{Mueller1972}.
 By using traditional proxy voting instead of relay-style voting, we hope to exploit
 the advantages of proxy voting that the relay-style does not provide.
 
-Second, we assume that each voter has perfect knowledge of potential proxies' opinions.
+Second, we assume that each voter has reasonable knowledge of potential proxies'
+opinions, meaning they have a decent idea of the preferences of other proxies.
 This will allow them to choose the proxy that has the opinion most similar to their own.
 While in reality voters will likely not have perfect knowledge of others' opinions,
 it is often not particularly difficult to gauge the opinion of others, especially
 those with whom an individual often associates, and so we believe this assumption is
 reasonable.
-\vicki{Rather than "perfect", could we say "reasonable"? If amendments are being made
-and discussions are held, opinions will change. That is a good thing, in reaching
-consensus.}
 
 Third, we assume that abstention is not allowed.
 In other words, all agents must vote either themselves or by proxy.
