--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -489,11 +489,15 @@ reasonable.
 
 Third, we assume that abstention is not allowed.
 In other words, all agents must vote either themselves or by proxy.
-This is reasonable because all individuals will have some form of opinion, even if
-that opinion is completely neutral.
-Such an opinion is handled by the model this study employs, which will be discussed
-later. \vicki{Do we need this? This seems harsh. What if a voter is in an accident on
-the way to the House?}
+The primary reasoning behind this is to simplify the system being used and provide
+the system with as much information as possible without needing to account for
+extenuating circumstances such as the unexpected incapacitation of a voter.
+Additionally, all individuals will have some form of opinion, even if that opinion is
+completely neutral.
+A neutral opinion can be represented as a preference close to the middle of the
+preference space, which decreases the desire for abstention when voting is possible.
+Nevertheless, as a baseline, we will explore occasions where those who are not
+physically present are unable to vote.
 
 Finally, we assume that there are no factors besides closeness in opinion that affect
 the choice of proxy.
