Hopefully clarified how the system facilitates discussion

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -619,14 +619,12 @@ agreement to be used in the enforcement phase.
 We plan to expand voting to feed back into the bargaining phase by allowing voters to
 express their dissatisfaction with either side of an issue by voting towards the
 center of the interval.
-If enough agents vote towards the center, the bargaining phase can be restarted to
-allow more negotiation, thereby facilitating deliberation.
-\vicki{You seem to be thinking of the vote as really yay/nay, but that you are
-allowed to show how strongly you feel about either choice. This isn't consistent with
-the presentation earlier. I'm not sure the voter would do well by voting honestly,
-    For example, suppose I'm voting between Biden and Trump. I don't like either, but
-    a slightly prefer Biden. If I vote slightly towards Biden, I allow my vote to
-    essentially be ignored.}
+In the case of binary issues, such as yea/nay issues, if enough agents vote towards the
+center the bargaining phase can be restarted to allow more negotiation before
+performing a second vote, thereby facilitating deliberation.
+For more continuous issues, such as how much money to spend on defense, the
+continuous model allows agents to vote for moderate spending by voting towards the
+center, instead of high or low spending by voting at one of the extremes.
 
 
 \section{Proposed Work}\label{sec:contribution}
