--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -573,11 +573,11 @@ They apply these mechanisms on a dataset while looking only at datapoints withou
 Condorcet winner.
 In their work, they say a mechanism `beats' another if it has a larger fraction of
 the population prefer its output over the other's output.
-They discover that the GT~method~\cite{Rivest2010} beats all others,\vicki{Explain
-the abbreviation GT}
-the Schulze~method~\cite{Schulze2011} and Minimax voting mechanisms always agree and
-beat all other mechanisms besides the GT method, while Borda beats Copeland and
-Plurality, and Plurality comes in last.
+They discover that the GT\footnote{
+    Presumably meaning `Game Theory.'
+}~method~\cite{Rivest2010} beats all others, the Schulze~method~\cite{Schulze2011}
+and Minimax voting mechanisms always agree and beat all other mechanisms besides the
+GT method, while Borda beats Copeland and Plurality, and Plurality comes in last.
 This study will also look at voting mechanisms and attempt to determine which
 mechanism is best suited for proxy voting.
 Our work will differ significantly from theirs, however, as we will explore voting
