Update on Overleaf.

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -464,7 +464,8 @@ adaptability.
 % done has no problems. It would be better to say, we make this assumption because it
 % us more adaptable (like handling ammendments). Finding previous work which
 % motivates/justifies our assumptions would be good.}
-% MDH: See the following paragraph. Would it be benefi
+% MDH: See the following paragraph. Would it be beneficial to merge them to make
+%   the motivation more apparent?
 
 Instead, we consider scenarios where actual proxy voting is used, where the proxy
 receives the voting power of the delegating voter, increasing their weight, and
