--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -21,10 +21,10 @@ of proxy voting in other such emergencies.
 The type of proxy voting in Congress is not the traditional type of proxy vote.
 Instead, it is more similar to voting remotely, as quarantining members need to
 meet via video conference and the delegated proxy is required vote exactly as
-directed on behalf of their delegators.
+directed on behalf of their constituents.
 Nevertheless, using proxy voting in such an important part of the legislative process
 reignites the discussion on the effectiveness of traditional proxy voting where the
-proxy is able to vote on behalf of their delegators as the proxy desires.
+proxy is able to vote on behalf of their constituents as the proxy desires.
 The proxy being able to vote as they desire simplifies the voting process, but
 creates error in that information about the delegators' preferences is lost.
 Does proxy voting introduce too much error into the voting process?
@@ -179,8 +179,8 @@ the actual preferences of the voters.
 %   how it works. I've added a quick blurb at the beginning of this section to
 %   clarify on the goals of this section.
 This cost comes about because proxies will likely not vote exactly the same as their
-delegators due to having different preferences.
-This causes information about the delegators' preference to be lost and the system's
+constituents due to having different preferences.
+This causes information about the delegators' preferences to be lost and the system's
 accuracy to suffer.
 The loss in accuracy may be acceptable, however, if the system's welfare is sufficiently
 improved.
@@ -484,9 +484,9 @@ Instead, we consider scenarios where actual proxy voting is used, where the prox
 receives the voting power of the delegating voter, increasing their weight, and
 proceeds to votes according to their own preference.
 Traditional proxy voting also allows the proxy to update their (and by extension, their
-delegators') preferences as new information becomes available.
+constituents) preferences as new information becomes available.
 While traditional proxy voting gives substantial flexibility to the proxy to
-operate on behalf of their delegators, this flexibility requires the delegating voter
+operate on behalf of their constituents, this flexibility requires the delegating voter
 to choose a proxy who they trust to vote as close to how they themselves would.
 This is a process similar to selecting experts, as described by~\cite{Miller1969}
 and~\cite{Mueller1972}.
