Added blurb about when delegations occur

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -513,6 +513,11 @@ preference space, which decreases the desire for abstention when voting is possi
 Nevertheless, as a baseline, we will explore occasions where those who are not
 physically present are unable to vote.
 
+We also assume proxy delegations occur after all deliberations for the current round of
+voting and that voter preferences do not change after deliberation.
+This simplifies our analysis because we do not need to worry about a proxy's opinion
+changing during deliberation and ostracizing its constituents.
+
 Finally, we assume that there are no factors besides closeness in opinion that affect
 the choice of proxy.
 This differs from the actual system presently used by the House of Representatives,
