Update on Overleaf.

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -364,7 +364,7 @@ preferred choice}.
 Once all proxies are ranked, each proxy receives a score according to how
 many first place votes they receive.
 The proxy with the lowest number of votes is eliminated, and its votes are
-redistributed to the next closest for each affected agent.
+redistributed to the next closest for each affected agent.https://www.overleaf.com/project/632a088d49a00f76be264e30
 This continues until some proxy has the majority ($>$50\%) of votes, at which
 time that proxy is selected as \systemtruth.  \com{How interesting is instant runoff
 when the votes are on a linear scale? For example, single peaked preference makes
