--- a/references/research.bib
+++ b/references/research.bib
@@ -277,7 +277,7 @@ Must follow instructions exactly: <https://www.congress.gov/bill/116th-congress/
   doi        = {10.1613/jair.1.12388},
   issn       = {1076-9757},
   pages      = {1413–1439},
-  url        = {https://doi.org/10.1613/jair.1.12388},
+  url        = {https://dl.acm.org/doi/pdf/10.1613/jair.1.12388},
   volume     = {70},
   abstract   = {We present a unifying framework encompassing a plethora of social choice settings. Viewing each social choice setting as voting in a suitable metric space, we offer a general model of social choice over metric spaces, in which—similarly to the spatial model of elections—each voter specifies an ideal element of the metric space. The ideal element acts as a vote, where each voter prefers elements that are closer to her ideal element. But it also acts as a proposal, thus making all participants equal not only as voters but also as proposers. We consider Condorcet aggregation and a continuum of solution concepts, ranging from minimizing the sum of distances to minimizing the maximum distance. We study applications of our abstract model to various social choice settings, including single-winner elections, committee elections, participatory budgeting, and participatory legislation. For each setting, we compare each solution concept to known voting rules and study various properties of the resulting voting rules. Our framework provides expressive aggregation for a broad range of social choice settings while remaining simple for voters; and may enable a unified and integrated implementation for all these settings, as well as unified extensions such as sybil-resiliency, proxy voting, and deliberative decision making.&nbsp;},
   address    = {El Segundo, CA, USA},
