Added Law Shelf

--- a/references/research.bib
+++ b/references/research.bib
@@ -305,6 +305,15 @@ Must follow instructions exactly: <https://www.congress.gov/bill/116th-congress/
   year      = {2022},
 }
 
+@Misc{LawShelf,
+  author    = {{Law Shelf}},
+  title     = {Voting by proxy},
+  url       = {https://lawshelf.com/coursewarecontentview/voting-by-proxy},
+  urldate   = {2023-1-20},
+  journal   = {Foundations of Law},
+  publisher = {National Paralegal College},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: fileDirectoryLatex-micha-CrimsonSpace:D:\\Projects\\Thesis-Experiments\\Report;}
